ppc, s390 (non-pch) build errors

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b10

      Various build errors on our platforms caused by missing includes and missing inline specs on methods:

      - frame::frame(p, p) constructor missing inline directive, leading to link errors
      - missing orderAccess.inline.hpp in nativeInst_ppc.cpp

      For a more extensive analysis, please see JDK-8199472.

            Assignee:
            Thomas Stuefe
            Reporter:
            Thomas Stuefe
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: