8200302: ppc, s390 (non-pch) build errors

Reviewed-by: coleenp, lfoltan